# wagtail-daisIE

./: .pre-commit-config.yaml  .prettierignore  .stylelintignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  package-lock.json  pyproject.toml  release-please-config.json  ruff.toml  testmanage.py
.agents/skills/daisyui/: SKILL.md
.agents/skills/daisyui/components/: hover-3d.md  text-rotate.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  nightly.yml  publish.yml  template.yml  test.yml  zizmor.yml
demo/demo/settings/: base.py
demo/static/wagtailadmin/js/: bulk-actions.js  chooser-modal.js  chooser-widget-telepath.js  chooser-widget.js  comments.js  core.js  date-time-chooser.js  draftail.js  filtered-select.js  icons.js  modal-workflow.js  page-chooser-modal.js  page-chooser-telepath.js  page-chooser.js  privacy-switch.js  sidebar.js  task-chooser-modal.js  task-chooser.js  userbar.js  vendor.js  wagtailadmin.js  workflow-action.js
demo/static/wagtailadmin/js/telepath/: blocks.js  telepath.js  widgets.js
demo/static/wagtaildocs/js/: add-multiple.js  document-chooser-modal.js  document-chooser-telepath.js  document-chooser.js
demo/static/wagtailembeds/js/: embed-chooser-modal.js
demo/static/wagtailimages/js/: add-multiple.js  focal-point-chooser.js  image-block.js  image-chooser-modal.js  image-chooser-telepath.js  image-chooser.js
demo/static/wagtailsnippets/js/: snippet-chooser-telepath.js  snippet-chooser.js
src/wagtail_daisIE/: apps.py  form_fields.py  models.py  panels.py  utils.py  wagtail_hooks.py  widgets.py
src/wagtail_daisIE/migrations/: 0001_initial.py
src/wagtail_daisIE/templates/wagtail_daisIE/admin/: daisyui_size_widget.html
src/wagtail_daisIE/templates/wagtail_daisIE/previews/: theme.html
src/wagtail_daisIE/templatetags/: wagtail_daisIE_tags.py
src/wagtail_daisIE/test/: apps.py  settings.py
(+1 files in other folders)
