[project]
name = "wagtail-daisIE"
version = "0.1.2"
description = "Create reusable DaisyUI themes through Wagtail"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 6.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
]
requires-python = ">=3.13"
dependencies = [
    "Django>=5.0",
    "django-colorfield>=0.14.0",
    "Wagtail>=7.3.2",
]

[project.urls]
Homepage = "https://github.com/baldwinboy/wagtail-daisIE"
Repository = "https://github.com/baldwinboy/wagtail-daisIE"
Changelog = "https://github.com/baldwinboy/wagtail-daisIE/blob/main/CHANGELOG.md"
Documentation = "https://github.com/baldwinboy/wagtail-daisIE/blob/main/README.md"
Issues = "https://github.com/baldwinboy/wagtail-daisIE/issues"

[dependency-groups]
dev = [
    "dj-database-url==2.1.0",
    "pre-commit==3.4.0",
    "prek>=0.4.1",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-django==4.8.0",
    "ruff>=0.15.9",
]
[build-system]
requires = ["uv_build>=0.11.1,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "wagtail_daisIE"
source-exclude = [
    "wagtail_daisIE/static_src",
    "wagtail_daisIE/test",
    "wagtail_daisIE/static/wagtail_daisIE/js/.gitignore",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wagtail_daisIE.test.settings"
